# Content-moderation-ml-system

./: .gitignore  README.md
api-service/: Dockerfile  pyproject.toml
api-service/src/serving/: main.py
inference-service/: Dockerfile  app.py  pyproject.toml  requirement.txt
inference-service/models/: image.py  text.py
ui/moderation-ui/src/: App.jsx
