[tool.poetry]
name = "moderation-api"
version = "0.1.0"
description = "API Gateway for Content Moderation"
authors = ["Prerana MN"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
httpx = "^0.28.1"
redis = "^7.1.0"
python-multipart = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
