[tool.poetry]
name = "moderation-inference"
version = "0.1.0"
description = "ML Inference Service"
authors = ["Prerana MN"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
transformers = "^4.40.0"
torch = { version = "2.2.2", source = "pytorch-cpu" }
pillow = "^10.0.0"
python-multipart = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"